Created CSS and JS files

--- a/IndexNew.html
+++ b/IndexNew.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
-
-    <style>
-      h1 {
-        text-align: center;
-        color: blue;
-      }
-    </style>
+    <link rel="stylesheet" href="StyleNew.css" />
   </head>
   <body>
     <h1>Hello Git</h1>
+    <script src="scriptnew.js"></script>
   </body>
 </html>
