Added HTML login form

--- a/IndexNew.html
+++ b/IndexNew.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <form>
+<input type="email" placeholder="Enter your email"/>
+<input type="password" placeholder="Enter your password"/>
+<input type="submit" placeholder="Login"/>
+</form>
+
+
+
+    </form>
     <script src="scriptnew.js"></script>
   </body>
 </html>
