Added image and link on HTML

--- a/IndexNew.html
+++ b/IndexNew.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="StyleNew.css" />
   </head>
   <body>
-    <h1>Hello Git</h1>
-    <form>
-<input type="email" placeholder="Enter your email"/>
-<input type="password" placeholder="Enter your password"/>
-<input type="submit" placeholder="Login"/>
-</form>
-
-
-
-    </form>
+    <h1>
+      Hosted with
+      <a href="https://www.netlify.com">Netlify</a>
+    </h1>
+    <img
+      src="https://img.freepik.com/
+free-vector/network-servers-set_1284-12642.jpg"
+      alt=""
+    />
     <script src="scriptnew.js"></script>
   </body>
 </html>
